# rent-agent

./: .env.example  .gitignore  README.md  config.py  logging_conf.py  main.py  mock_llm.py  mock_rental_api.py  pyproject.toml  requirements.txt  run.py  run_local_test.sh  指令  指令.txt  租房API接口.json  租房_agent_赛题解析与解题思路_507972d2.plan.md  需求说明.md
.cursor/plans/: 租房_agent_开发计划_820ea190.plan.md  租房_agent_赛题解析与解题思路_507972d2.plan.md  租房agent赛题解析与本地测试_5464919a.plan.md
agent/: __init__.py  api_logger.py  config.py  handler.py  llm_client.py  main.py  prompts.py  rental_client.py  session.py  tools.py
api/: chat.py
scripts/: run_tests.py
src/: __init__.py  __main__.py  agent.py  api_logger.py  config.py  housing_api.py  llm_client.py  main.py  rent_api_client.py  session.py  session_manager.py
src/rent_agent/: __init__.py  __main__.py  agent.py  api_client.py  config.py  llm_client.py  logger.py  main.py  parser.py  session.py
tests/: conftest.py  run_tests.py  test_agent.py  test_cases.json  test_rental_client.py
tests/fixtures/: sample_cases.json
tests/fixtures/houses/: by_platform_dongcheng_empty.json  by_platform_haidian_2bed.json  by_platform_xicheng_1bed.json
tests/fixtures/landmarks/: search_xierqi.json
tools/: definitions.py  executor.py  rent_api.py
